--- a/requirements.txt
+++ b/requirements.txt
@@ -96,7 +96,7 @@ safetensors==0.4.0
 scikit-image==0.21.0
 scikit-learn
 scipy 
-seaborn @ 
+seaborn
 selenium==4.15.2
 sentry-sdk==1.31.0
 setproctitle==1.3.3
